--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <form>
     <lable> Tên đăng nhập: </lable> <input type="text" id="username" name="usernam"> <br>
     <lable> Mật khẩu: </lable> <input type="text" id="password" name="password" >
-     <button type="submit" onclick=login() > Đăng nhập </button>
+     <button type="submit" id="ok" name="ok" onclick=login() > Đăng nhập </button>
 </form> 
 
    <script src="script.js"> </script> 
