--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
    <form>
     <lable> Tên đăng nhập: </lable> <input type="text" id="username" name="usernam"> <br>
-    <lable> Mật khẩu: </lable> <input type="text" id="password" name="password" >
+    <lable> Mật khẩu: </lable> <input type="text" id="pw" name="pw" >
      <button type="submit" id="ok" name="ok" onclick=login() > Đăng nhập </button>
 </form> 
 
