--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
    <form>
-    <lable> Tên đăng nhập: </lable> <input type="text" id="username" name="usernam"> <br>
+    <lable> Tên đăng nhập: </lable> <input type="text" id="username" name="username"> <br>
     <lable> Mật khẩu: </lable> <input type="text" id="pw" name="pw" >
      <button type="submit" id="ok" name="ok" onclick=login() > Đăng nhập </button>
 </form> 
