--- a/Contents/Form.html
+++ b/Contents/Form.html
@@ -7,11 +7,14 @@
     <form>
       <ol>
         <li> Thông tin </li>
-        <lable> Họ và tên : <input type="text" name="txtTen"></lable> <br>
+        <lable> Họ và tên :<input type="text" name="txtTen"></lable> <br>
         <li>Ý kiến</li>
         <lable>Ý kiến đóng góp: </lable>
-        <textarea id="yk" name="yk" rows="5" cols="50"
-      </ol>
+        <textarea id="yk" name="yk" rows="5" cols="50">
+
+        </textarea>
+        </ol>
     </form>
   </body>
+</head>
 </html>
