--- a/Contents/Form.html
+++ b/Contents/Form.html
@@ -7,10 +7,10 @@
     <form>
       <ol>
         <li> Thông tin </li>
-        <lable> Họ và tên :<input type="text" name="txtTen"></lable> <br>
+        <lable> Họ và tên :</lable> «input type="text" id="username" name="username"> <br>
         <li>Ý kiến</li>
         <lable>Ý kiến đóng góp: </lable>
-        <textarea id="yk" name="yk" rows="5" cols="50">
+        <textarea id= "yk" name="yk" rows="5" cols="50">
 
         </textarea>
         </ol>
