--- a/Contents/Form.html
+++ b/Contents/Form.html
@@ -1,20 +1,32 @@
+<DOC!TYPE html>
 <html>
   <head>
-    
-
-  <body>
-    <h2> Đóng góp ý kiến </h2>
+<link rel="stylesheet" href="style.css"
+<body>
+  <h2> Đóng góp ý kiến cá nhân </h2>
     <form>
       <ol>
         <li> Thông tin </li>
-        <lable> Họ và tên :</lable> «input type="text" id="username" name="username"> <br>
+        <lable> Họ và tên : </lable>  
+        <input type="text" id="username" name="username"> <br>
+        <lable> Địa chỉ email : </lable>
+        <input type="text" id="username" name="username"> <br>
         <li>Ý kiến</li>
         <lable>Ý kiến đóng góp: </lable>
-        <textarea id= "yk" name="yk" rows="5" cols="50">
+        <textarea id="yk" name="yk" rows="5" cols="50">
 
         </textarea>
-        </ol>
+      </ol>
+  <input type ="checkbox" name = "
+  chkTruyenNgan">Truyện ngắn <br>
+  <input type ="checkbox" name = "
+  chkKiNang">Kỹ năng sống <br>
+  <input type ="checkbox" name = "
+  chkCNTT">Công nghệ thông tin <br>
+  <input type ="checkbox" name = "
+  chkLichSu">Lịch sử <br>
+  <input type ="submit" name = "cmd" value="Góp ý"
     </form>
-  </body>
-</head>
-</html>
+</body>
+  </head>
+  </html>
