--- a/Home.html
+++ b/Home.html
@@ -49,3 +49,8 @@
       <tr> <td colspan="2" height="25px" bgcolor="LightCoral"> </td>
        </tr> 
     </table>
+    <script scr= "script.js"></script>
+  </body>
+</html>
+      
+    
